--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
   margin: 1;
   padding: 1;
   background-color: #171717;
-  color: #f2f2f2;
+  color: #ffffff;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -328,7 +328,8 @@ ul {
 
 .heading {
     text-align: center; /* Center-align the text */
-    margin-bottom: 60px; /* Add some bottom margin for spacing */
+    margin-bottom: 40px; /* Add some bottom margin for spacing */
+    margin-top: 40px;
 }
 /* research sec */
 
@@ -341,6 +342,13 @@ ul {
   border-radius: 5px;
   transition: background-color 0.2s ease-in-out;
 }
+
+.research-item img {
+  width: 100%;
+  height: 300px; /* Adjust this value as needed */
+  object-fit: contain;
+}
+
 
 .download-container {
   margin-top: 20px;
@@ -553,4 +561,85 @@ ul {
     display: none;
   }
 
-  
+  /* modal */
+  #modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  #modal {
+    max-width: 600px;
+    padding: 1.5rem;
+    border: 0;
+  }
+
+  #modal .modal-btn {
+    padding: 10px 18px;
+    margin-top: 10px;
+  }
+  #modal .modal-btn:first-child {
+    /* Subscribe Button */
+    background-color: #4D89C2;
+  }
+  #modal .modal-btn:last-child {
+    /* Close Button */
+    border: 1px solid black;
+    background-color: #fff;
+    margin-left: 16px;
+  }
+  #modal .modal-btn:last-child:hover {
+    color: white;
+    background-color: #000;
+  }
+
+  #modal::backdrop {
+    background: rgb(0 0 0 / 0.5);
+  }
+
+  #modal h2 {
+    margin-bottom: 20px;
+  }
+  #modal p {
+    font-weight: 500;
+    margin-bottom: 10px;
+  }
+
+  button {
+    border: none;
+    font-family: inherit;
+    cursor: pointer;
+  }
+
+  .content {
+    max-width: 900px;
+  }
+
+  .content h1 {
+    font-size: 40px;
+    font-weight: 700;
+    color: #fff;
+    margin-bottom: 32px;
+  }
+  .content h1 span {
+    color: #4D89C2;
+  }
+
+  .content p {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+
+  .content .btn {
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.2s ease-in-out;
+    display: inline-block;
+    font-weight: 600;
+    font-size: 17px;
+    padding: 14px 20px;
+    background-color: #4D89C2;
+  }
