--- a/styles.css
+++ b/styles.css
@@ -2,328 +2,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Gothic+A1:wght@300;400;500;600;700;800&display=swap");
 
 body {
-  margin: 1;
-  padding: 1;
+  margin: 0;
+  padding: 0;
   background-color: #171717;
   color: #ffffff;
-  font-family: "Montserrat", sans-serif;
-}
-
-a,
-button {
-  all: unset;
-  cursor: pointer;
-}
-
-ul {
-  list-style: none;
-}
-
-.nav {
-  padding: 0.8rem 1.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav-left,
-.nav-right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.8rem;
-}
-.nav-brand {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 0.5rem;
-  translate: 0 0.25rem;
-}
-.nav-brand > img {
-  width: 5.3rem;
-}
-
-.nav-menu {
-  display: flex;
-  justify-content: center;
-  gap: 0.75rem;
-}
-
-.nav-link {
-  font-size: 0.875rem;
-  font-weight: 600;
-  padding: 0.6rem 0.625rem;
-  border-radius: 0.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.15s;
-}
-.nav-link > svg {
-  font-weight: 600;
-  width: 14px;
-  height: 14px;
-  margin-left: 4px;
-}
-.nav-link:hover {
-  background-color: #212121;
-}
-
-.btn-primary {
-  font-size: 1rem;
-  font-weight: 600;
-  padding: 0.625rem 1rem;
-  gap: 8px;
-  background-image: linear-gradient(144deg, #3b3586, #2e1d9b 50%, #281191);
-}
-.btn-primary > svg,
-.btn-icon > svg {
-  width: 20px;
-  height: 20px;
-  margin-left: 0;
-}
-
-.btn-profile {
-  font-size: 16px;
-  padding: 0.25rem 0.25rem 0.25rem 0.5rem;
-}
-.btn-profile > svg {
-  width: 24px;
-  height: 24px;
-  margin-left: 0;
-}
-.profile-pic {
-  width: 2.25rem;
-  margin-left: 1rem;
-  aspect-ratio: 1;
-}
-.profile-pic > img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  border-radius: 0.375rem;
-}
-
-/* DROPDOWN MENU */
-.dropdown-container {
-  position: relative;
-  overflow: visible;
-}
-
-.dropdown-menu {
-  position: absolute;
-  left: 0;
-  display: block;
-  visibility: hidden;
-  opacity: 0;
-  top: calc(100% + 8px);
-  background-color: #212121;
-  padding: 1rem;
-  gap: 0.5rem;
-  border-radius: 0.75rem;
-  z-index: 9999;
-  transition: 0.3s;
-}
-.dropdown-container:hover > .dropdown-menu {
-  opacity: 1;
-  visibility: visible;
-}
-.dropdown-menu.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 240px);
-}
-.dropdown-menu > a {
-  font-weight: 600;
-  padding: 1rem;
-  background-color: #292929;
-  padding: 1rem;
-  border-radius: 0.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.dropdown-menu > a:hover {
-  background-color: #353535;
-}
-.dropdown-menu > a > span:nth-of-type(2) {
-  color: #9ca3af;
-}
-
-/* Profile Dropdown */
-.profile-dropdown {
-  width: 100%;
-  padding: 5px;
-  translate: 0 -20px;
-  opacity: 0;
-  transition: 0.3s ease;
-}
-.dropdown-container:hover:has(.profile-dropdown) > .profile-dropdown {
-  translate: 0 0;
-  opacity: 1;
-}
-.profile-dropdown > a {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 8px;
-  background-color: transparent;
-  color: #d1d5db;
-  transition: 0.15s ease;
-}
-.profile-dropdown > a:hover {
-  background-color: #171717;
-  color: #f0f3f5;
-}
-
-.profile-dropdown > a:nth-child(3) {
-  background-color: #5966f3;
-  color: white;
-}
-.profile-dropdown > a:nth-child(3):hover {
-  background-color: #4150f1;
-}
-
-/* Menu Icon */
-.menu-icon {
-  display: none;
-  cursor: pointer;
-  padding: 4px;
-  border-radius: 6px;
-  background-color: transparent;
-}
-
-.menu-icon .bar {
-  width: 25px;
-  height: 3px;
-  background-color: #f2f2f2;
-  margin: 4px 0;
-  transition: 0.4s;
-}
-
-/* Rotate first bar when menu is active */
-.menu-icon.active .bar:nth-child(1) {
-  transform: rotate(-45deg) translate(-5px, 5px);
-}
-/* Fade out the middle bar when menu is active */
-.menu-icon.active .bar:nth-child(2) {
-  opacity: 0;
-}
-/* Rotate third bar when menu is active */
-.menu-icon.active .bar:nth-child(3) {
-  transform: rotate(45deg) translate(-5px, -5px);
-}
-
-.menu-icon:hover {
-  background-color: #212121;
-}
-
-@media (width <= 900px) {
-  .nav-left > .nav-menu {
-    display: none;
-  }
-  .nav-right > * {
-    display: none;
-  }
-
-  .menu-icon {
-    display: block;
-  }
-}
-
-/* gsec */
-
-.section-1 {
-	flex: 1;
-}
-.section-1 .logo {
-	display: block;
-	margin: 0px auto;
-	margin-top: 107px;
-}
-.s-box {
-	width: 580px;
-	margin: 0px auto;
-	position: relative;
-	margin-top: -8px;
-	text-align: center;
-}
-.s-box .s-input {
-	display: block;
-	border: 1px solid #ddd;
-	color: rgba(0,0,0, 0.87);
-	font-size: 16px;
-	padding: 13px;
-	padding-left: 45px;
-	border-radius: 25px;
-	width: 100%;
-	transition: box-shadow 100ms;
-	outline: none;
-}
-.s-box  .s-input:hover {
-	border: 1px solid #fff;
-	box-shadow: 0 0 2px rgba(0, 0, 0, 0.05), 
-				0 0 2px rgba(0, 0, 0, 0.05),
-				0 0 3px rgba(0, 0, 0, 0.05),
-				0 0 4px rgba(0, 0, 0, 0.05), 
-				0 0 5px rgba(0, 0, 0, 0.05), 
-				0 0 4px rgba(0, 0, 0, 0.05), 
-				0 0 5px rgba(0, 0, 0, 0.05)
-}
-.s-box .search-icon {
-	width: 20px;
-	opacity: .4;
-	position: absolute;
-	top: 13px;
-	left: 14px;
-}
-.s-box .vs-icon {
-	width: 14px;
-	position: absolute;
-	top: 13px;
-	right: 24px;
-}
-.s-btn {
-	border: 1px solid transparent;
-	padding: 9px 15px;
-	color: #666;
-	font-size: 14px;
-	border-radius: 4px;
-	display: inline-block;
-	margin-right: 10px;
-	margin-top: 28px;
-	outline: none;
-	cursor: pointer;
-	transition: border-color 100ms;
-}
-.s-btn:hover {
-	border: 1px solid #aaa;
-}
-.lang {
-	margin-top: 30px;
-	text-align: center;
-	font-size: 13px;
-	color: #111;
-}
-.lang a {
-	margin-left: 5px;
-	color: #1a0dab;
-}
-.lang a:hover {
-	text-decoration: underline;
-}
-.links {
-	border-top: 1px solid #ddd;
-	display: flex;
-}
-.link-1 {
-	padding-left: 18.7px;
-	flex: 1;
-}
-.link-2 {
-	padding-right: 18.7px;
-}
-.section-1 {
-    margin-bottom: 60px; /* Add bottom margin to create space between sections */
+  font-family: "Ubuntu", sans-serif;
 }
 
 .heading {
@@ -607,74 +290,6 @@ ul {
   .input-box input[type="email"]::placeholder {
     color: white;
   }
-  
-  /* upload */
-  .container {
-    height: 300px;
-    width: 300px;
-    border-radius: 10px;
-    box-shadow: 4px 4px 30px rgba(0, 0, 0, .2);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    gap: 5px;
-    background-color: rgba(0, 110, 255, 0.041);
-  }
-  
-  .header {
-    flex: 1;
-    width: 100%;
-    border: 2px dashed royalblue;
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-  
-  .header svg {
-    height: 100px;
-  }
-  
-  .header p { 
-    text-align: center;
-    color: black;
-  }
-  
-  .footer {
-    background-color: rgba(0, 110, 255, 0.075);
-    width: 100%;
-    height: 40px;
-    padding: 8px;
-    border-radius: 10px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    color: rgb(255, 255, 255);
-    border: none;
-  }
-  
-  .footer svg {
-    height: 130%;
-    fill: royalblue;
-    background-color: rgba(70, 66, 66, 0.103);
-    border-radius: 50%;
-    padding: 2px;
-    cursor: pointer;
-    box-shadow: 0 2px 30px rgba(0, 0, 0, 0.205);
-  }
-  
-  .footer p {
-    flex: 1;
-    text-align: center;
-  }
-  
-  #file {
-    display: none;
-  }
 
   /* modal */
   #modal {
@@ -758,3 +373,10 @@ ul {
     padding: 14px 20px;
     background-color: #4D89C2;
   }
+  
+  .navbar .logo img {
+    max-height: 60px; /* Increase the max-height */
+    margin-right: 10px; /* Add some right margin for spacing */
+  }
+
+  
